2017-05-15  Sebastien Alaiwan <sebastien.alaiwan@gmail.com>

	* jit/jit-opcodes: include jit/jit-opcode-compat.h instead of
	jit-opcode-compat.h.
	* jit/Makefile.am: make path of generated dependencies relative to
	top_builddir.

2016-11-10  Tomasz Borowik  <timon37@gmail.com>
	* include/jit/jit-meta.h: include jit-coomon.h instead of jit-defs.h

2016-10-22  Aleksey Demakov  <ademakov@gmail.com>

	* tools/gen-apply-helper.h
	* tools/gen-apply-helper.c: move register detection functions to
	separate files to avoid inter-procedural constant propagation in
	modern compilers (e.g. gcc-6.*).

2016-04-08  Aleksey Demakov  <ademakov@gmail.com>

	* jit/jit-insn.c (jit_insn_label): revert the function to its old
	behavior of unconditional new basic block creation. Certain code
	relied upon it.

	* include/jit/jit-insn.h, jit/jit-insn.c (jit_insn_label_tight): add
	new function for the behavior of jit_insn_label() before reverted,
	use it in most cases.

	* include/jit/jit-plus.h
	* jitplus/jit-plus-function.cpp (insn_label_tight): likewise.

	* README, tests/README, jitruby/README: update.

2016-04-07  Aleksey Demakov  <ademakov@gmail.com>

	* jit/jit-insn.c (jit_insn_call): the "intuit additional flags" code
	was using wrong (caller instead of callee) function.

	* bootstrap: renamed from auto_gen.sh

2016-03-09  Ketmar Dark <ketmar@ketmar.no-ip.org>

	* jit/jit-insn.c (jit_insn_nop): add function.

	* doc/mkhtml_onefile.sh: add file.

	* doc/Makefile.am, doc/libjit.texi, jit/jit-objmodel.c: build docs
	for `objmodel` extension.

2014-06-18  Aleksey Demakov  <ademakov@gmail.com>

	* jit/jit-value.c (jit_value_get_param): add range check for param
	argument (thanks Niklas Koep).

2014-03-11  Niklas Koep  <niklas.koep@gmail.com>

	* doc/Makefile.am, doc/libjit.texi: Include docs from jit-compile.c.

2014-01-21  John Perkins  <jeperk70@gmail.com>

	* doc/libjit.texi: Fix makeinfo problem with newer texinfo.

2014-01-20  Ben Noordhuis  <info@bnoordhuis.nl>
